<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ferdidrgn.anlikdepremler.ui.main.MainViewModel" />
    </data>

    <LinearLayout
        style="@style/rectangle_top_10_primary2_border_primary3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgClose"
                style="@style/ImgTintColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0.2"
                android:onClick="@{()->viewModel.onClickClose()}"
                android:src="@drawable/ic_close_delete_exit_remove" />

            <TextView
                style="@style/TextColor_primary9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/filter"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvClear"
                style="@style/TextColorHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:onClick="@{()->viewModel.onClickClear()}"
                android:padding="10dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/viewLine"
            style="@style/ViewBackground"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp" />

        <RelativeLayout
            style="@style/rectangle_primary6_10_border_primary3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="5dp"
            android:onClick="@{()->viewModel.onBtnChooseLocationClick()}">

            <TextView
                style="@style/TextColorHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choose_location"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvLocationDescription"
            style="@style/TextColor_primary9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/location_filter_info"
            android:visibility="@{viewModel.clickMapLocation ? View.VISIBLE : View.GONE}" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapBottomSheet"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:visibility="@{viewModel.clickMapLocation ? View.VISIBLE : View.GONE}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <com.ferdidrgn.anlikdepremler.tools.components.CustomEditText
                    android:id="@+id/tvLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:visibility="@{viewModel.clickMapLocation ? View.GONE : View.VISIBLE}"
                    app:custom_edit_hint="@string/location"
                    app:custom_edit_text="@={viewModel.location}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.ferdidrgn.anlikdepremler.tools.components.CustomEditText
                        android:id="@+id/tvStartDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/start_date"
                        app:custom_edit_text="@={viewModel.startDate}" />

                    <com.ferdidrgn.anlikdepremler.tools.components.CustomEditText
                        android:id="@+id/tvEndDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/end_date"
                        app:custom_edit_text="@={viewModel.endDate}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.ferdidrgn.anlikdepremler.tools.components.CustomEditText
                        android:id="@+id/tvMl"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/ml"
                        app:custom_edit_text="@={viewModel.ml}" />
                </LinearLayout>

                <RelativeLayout
                    style="@style/rectangle_bottom_10_primary2_border_primary3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="40dp"
                    android:onClick="@{()->viewModel.onClickApply()}"
                    android:paddingHorizontal="14dp"
                    android:paddingVertical="10dp">

                    <TextView
                        style="@style/TextColorHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/apply_filter"
                        android:textSize="14sp" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>