<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ferdidrgn.anlikdepremler.ui.main.MainViewModel" />

        <variable
            name="nowEarthquakeAdapter"
            type="com.ferdidrgn.anlikdepremler.ui.main.nowEarthquake.NowEarthquakeAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.mapsEartquake.MapsEarthquakeActivity">

        <include
            android:id="@+id/mapMarker"
            layout="@layout/item_map_marker"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/btnMap"
            style="@style/rounded_primary2_10_border_primary3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:onClick="@{() -> viewModel.onClickList()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/ImgTintColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/ic_format_list" />

            <TextView
                style="@style/TextColor_primary8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:text="@string/list"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgBack"
            style="@style/ImgTintColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:onClick="@{() -> viewModel.onClickClose()}"
            android:padding="20dp"
            android:src="@drawable/ic_close_delete_exit_remove"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvHeader" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/TextColorHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/map"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnMap"
            app:layout_constraintEnd_toStartOf="@+id/imgBack"
            app:layout_constraintStart_toEndOf="@+id/btnMap"
            app:layout_constraintTop_toTopOf="@+id/btnMap" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:adSize="BANNER"
            app:adUnitId="@string/BANNER_ADS_REAL"
            app:layout_constraintTop_toBottomOf="@+id/btnMap" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="67dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_primary_20"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/map">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_filter"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_white_40_border_stroke"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout4">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginStart="18dp"
                android:src="@drawable/ic_manage_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/white"
                android:hint="@string/search_hint"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:setAdapter="@{nowEarthquakeAdapter}"
            app:submitListSet="@{viewModel.isNearPage() ? viewModel.getNearEarthquakeList : viewModel.getNowEarthquakeList}"
            tools:layout_editor_absoluteX="1dp"
            tools:listitem="@layout/item_now_earthquke_maps" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>