<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ferdidrgn.anlikdepremler.presentation.main.MainViewModel" />

        <variable
            name="nowEarthquakeAdapter"
            type="com.ferdidrgn.anlikdepremler.presentation.mapsEarthquake.NowEarthquakeAdapter" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.main.nowEarthquake.NowEarthquakeFragment">

            <LinearLayout
                android:id="@+id/btnMap"
                style="@style/rounded_primary2_10_border_primary3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:onClick="@{() -> viewModel.onClickMap()}"
                android:visibility="@{viewModel.clickableHeaderMenus ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    style="@style/ImgTintColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="3dp"
                    android:src="@drawable/ic_map" />

                <TextView
                    style="@style/TextColor_primary8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:text="@string/map" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvHeader"
                style="@style/TextColorHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/now_earthquake"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llFilters"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:onClick="@{() -> viewModel.onClickFilter()}"
                android:visibility="@{viewModel.isNearPage ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    style="@style/rounded_primary2_10_border_primary3"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:paddingHorizontal="10dp">

                    <ImageView
                        android:id="@+id/imgFilter"
                        style="@style/ImgTintColor"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_filter" />

                    <TextView
                        android:id="@+id/tvFilter"
                        style="@style/TextColor_primary8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/filter"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEarthquake"
                itemAnimator="@{null}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingStart="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader"
                app:layout_constraintVertical_bias="0.0"
                app:setAdapter="@{nowEarthquakeAdapter}"
                app:submitListSet="@{viewModel.isNearPage() ? viewModel.getNearEarthquakeList : viewModel.getNowEarthquakeList}"
                tools:listitem="@layout/item_now_earthquake_list" />

            <TextView
                android:id="@+id/searchMassage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="36dp"
                android:text="@string/search_message"
                android:textColor="@color/red_err"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>